After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745908 - users: Fix fingerprint delete dialog formatting
users: Fix fingerprint delete dialog formatting
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
unspecified
Other All
: Normal normal
: ---
Assigned To: Ondrej Holy
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-03-09 17:58 UTC by Matthias Clasen
Modified: 2015-03-10 10:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
users: Fix fingerprint delete dialog formatting (1.40 KB, patch)
2015-03-09 17:58 UTC, Matthias Clasen
committed Details | Review

Description Matthias Clasen 2015-03-09 17:58:40 UTC
The manual borderwidth setting breaks message dialog appearance.
While we are here, remove some unnecessary calls.
Comment 1 Matthias Clasen 2015-03-09 17:58:43 UTC
Created attachment 298904 [details] [review]
users: Fix fingerprint delete dialog formatting
Comment 2 Rui Matos 2015-03-09 19:53:34 UTC
Review of attachment 298904 [details] [review]:

sure
Comment 3 Matthias Clasen 2015-03-10 10:43:41 UTC
Attachment 298904 [details] pushed as 165be44 - users: Fix fingerprint delete dialog formatting