users: Fix fingerprint delete dialog formatting

The manual borderwidth setting breaks message dialog appearance.
While we are here, remove some unnecessary calls.

https://bugzilla.gnome.org/show_bug.cgi?id=745908